--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   google_sign_in: ^5.4.4
   audioplayers: 5.2.0
   shared_preferences: ^2.2.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   fl_chart: 0.63.0
   http: ^1.1.0
   file_picker: ^8.0.7
@@ -33,6 +33,12 @@ dependencies:
   cached_network_image: ^3.3.1
   lottie: ^2.7.0
   timeago: ^3.6.0
+  flutter_card_swiper: ^6.0.0
+  flutter_cache_manager: ^3.3.1
+  flutter_tts: ^3.8.5
+  flutter_localizations:
+    sdk: flutter
+  flutter_gen: ^5.4.0
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +47,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - .env
